--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,13 +5,15 @@
 <head>
     <title>Coronavirus Tracker</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
 
-    <table>
-        <tr>
+    <table class="table table-striped">
+        <tr class="table-dark">
             <th>Country</th>
             <th>State</th>
             <th>Total Cases</th>
